fix css flexbox wrap issue

--- a/client/src/components/pages/Home/style.scss
+++ b/client/src/components/pages/Home/style.scss
@@ -4,4 +4,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
+
+@media only screen and (min-width: 768px) {
+	.event-card-container {
+		flex-direction: row;
+	}
 }
